# minilink

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yaml  release.yaml
crates/lib/: Cargo.toml
crates/lib/src/: context.rs  lib.rs
crates/tests/: Cargo.toml  build.rs
crates/tests/ld/: test.in.ld
crates/tests/src/: lib.rs
