[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
edition = "2024"
exclude = ["/.github"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/gibbz00/minilink"
version = "0.1.0"

[workspace.dependencies]
minilink = { path = "./crates/lib" }

[workspace.lints.rust]
missing_docs = "warn"
unused_must_use = "deny"

[profile.dev]
debug = 0
strip = "debuginfo"
