[package]
name = "minilink"

categories = ["config", "embedded"]
description = "Template and register linker scripts"
keywords = ["linker_script", "template"]

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
minijinja = "2.10.2"
serde = "1.0"
