[package]
name = "minilink"

categories = ["config", "embedded"]
description = "Template and register linker scripts"
keywords = ["linker_script", "template"]

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
minijinja-defaults = [
  "minijinja/adjacent_loop_items",
  "minijinja/builtins",
  "minijinja/debug",
  "minijinja/macros",
  "minijinja/multi_template",
]

[lints]
workspace = true

[dependencies]
minijinja = { version = "2.13.0", default-features = false, features = ["deserialization", "serde", "std_collections"] }
serde = "1.0"
